# aw01

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  styles.css
docs/: knowledge_backfill.md  knowledge_bootstrap.md  knowledge_strategy.md  webhook_setup.md
k8s/: deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
src/work_harness/: __init__.py  config.py  logging_config.py  main.py
src/work_harness/api/: app.py
src/work_harness/connectors/: __init__.py  atlassian_self_hosted_enterprise.py  base.py  factory.py  github_enterprise_cloud.py  github_tool_registry.py  slack_enterprise_grid.py
src/work_harness/domain/: models.py
src/work_harness/graph/: supervisor.py
src/work_harness/providers/: __init__.py  base.py  openai_provider.py  rule_based.py
src/work_harness/repositories/: memory.py  sqlite.py
src/work_harness/safety/: __init__.py  action_policy.py  tool_registry.py  workspace_manager.py
src/work_harness/services/: audit_log.py  backfill.py  bootstrap.py  harness.py  knowledge_policy.py  knowledge_store.py  (+7 more)
tests/: test_action_policy.py  test_api.py  test_knowledge_policy.py  test_knowledge_service.py  test_knowledge_store.py  test_operations_api.py  test_settings_api.py  test_subscription_filtering.py  test_supervisor_graph.py  test_web_dev_proxy.py  test_webhook_knowledge_sync.py  test_webhooks_api.py
(+14 files in other folders)
