[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "langgraph-work-harness"
version = "0.1.0"
description = "Event-driven AI work harness built with LangGraph and FastAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20,<1",
  "apscheduler>=3.10,<4",
  "chromadb>=0.5,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "langchain-core>=0.3,<1",
  "langchain-openai>=0.2,<1",
  "langgraph>=0.2,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.6,<3",
  "python-dotenv>=1.0,<2",
  "sse-starlette>=2.1,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/work_harness"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
